Add some View controllers

--- a/RotationDemo/Base.lproj/Main.storyboard
+++ b/RotationDemo/Base.lproj/Main.storyboard
@@ -1,24 +1,219 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qhg-qf-j9b">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--系统旋转-->
+        <scene sceneID="K4Q-og-S45">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xyp-RV-ddJ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="系统旋转" image="feed_icon_close_small" landscapeImage="feed_icon_close_small" id="OOv-6D-xxK"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8rq-zr-f7g">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="K4k-ri-10h" kind="relationship" relationship="rootViewController" id="WFQ-jU-ecW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MB1-JE-7vy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="104.8" y="133.5832083958021"/>
+        </scene>
+        <!--First Table View Controller-->
+        <scene sceneID="KKf-S2-yNK">
+            <objects>
+                <tableViewController id="K4k-ri-10h" customClass="RDFirstTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="n2R-Bf-Aaa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RDFirstTableViewCell" rowHeight="120" id="Zwb-Nd-c7J">
+                                <rect key="frame" x="0.0" y="28" width="375" height="120"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Zwb-Nd-c7J" id="7Tq-mQ-joz">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pic" translatesAutoresizingMaskIntoConstraints="NO" id="IPq-XY-L9H">
+                                            <rect key="frame" x="142" y="14" width="90" height="90"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="90" id="NmE-rj-IUG"/>
+                                                <constraint firstAttribute="width" constant="90" id="fmI-AR-pNp"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="IPq-XY-L9H" firstAttribute="centerY" secondItem="7Tq-mQ-joz" secondAttribute="centerY" id="C8u-Zo-J5T"/>
+                                        <constraint firstItem="IPq-XY-L9H" firstAttribute="centerX" secondItem="7Tq-mQ-joz" secondAttribute="centerX" id="eta-U8-wMt"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="K4k-ri-10h" id="FPe-fA-ol4"/>
+                            <outlet property="delegate" destination="K4k-ri-10h" id="RJY-WS-Bad"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="6HI-qO-IkU"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a0x-5l-R14" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="932" y="134"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="7BU-bR-X82">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="qhg-qf-j9b" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rEh-b7-mhy">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="xyp-RV-ddJ" kind="relationship" relationship="viewControllers" id="pVA-0s-fe9"/>
+                        <segue destination="xwM-B1-CLf" kind="relationship" relationship="viewControllers" id="1IQ-ZC-ElT"/>
+                        <segue destination="EN7-LE-drE" kind="relationship" relationship="viewControllers" id="T8F-qG-rL3"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EMI-k2-A90" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1386" y="842"/>
+        </scene>
+        <!--View 旋转-->
+        <scene sceneID="owg-FF-ogr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xwM-B1-CLf" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="View 旋转" image="feed_icon_close_small" landscapeImage="feed_icon_close_small" id="3iN-AZ-REF"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="K8i-Og-4zw">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="VlN-xz-Nsd" kind="relationship" relationship="rootViewController" id="hwD-bk-DLB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lnu-iM-q2G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="105" y="842"/>
+        </scene>
+        <!--Second Table View Controller-->
+        <scene sceneID="Gt1-0z-GXz">
+            <objects>
+                <tableViewController id="VlN-xz-Nsd" customClass="RDSecondTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Jhb-rZ-DLy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="RDSecondTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RDSecondTableViewCell" rowHeight="120" id="JoR-Xx-ys6">
+                                <rect key="frame" x="0.0" y="28" width="375" height="120"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JoR-Xx-ys6" id="0OU-Qm-caC">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pic" translatesAutoresizingMaskIntoConstraints="NO" id="5JB-pH-sH2">
+                                            <rect key="frame" x="142.5" y="14" width="90" height="90"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="90" id="iBr-CN-q69"/>
+                                                <constraint firstAttribute="height" constant="90" id="p3C-Pf-rUz"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="5JB-pH-sH2" firstAttribute="centerY" secondItem="0OU-Qm-caC" secondAttribute="centerY" id="N1J-LY-Iwr"/>
+                                        <constraint firstItem="5JB-pH-sH2" firstAttribute="centerX" secondItem="0OU-Qm-caC" secondAttribute="centerX" id="noI-KN-PH9"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="VlN-xz-Nsd" id="ff4-5F-8OC"/>
+                            <outlet property="delegate" destination="VlN-xz-Nsd" id="zgm-fn-rnT"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="oPY-ML-ftT"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ICa-2z-fpf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="932" y="842"/>
+        </scene>
+        <!--Window 旋转-->
+        <scene sceneID="PHs-FO-DNL">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EN7-LE-drE" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Window 旋转" image="feed_icon_close_small" landscapeImage="feed_icon_close_small" id="xGP-b5-TII"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8W8-Iu-Vbw">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Pnu-cZ-z0J" kind="relationship" relationship="rootViewController" id="7oh-82-DWr"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dzk-Tm-TJO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="105" y="1555"/>
+        </scene>
+        <!--Third Table View Controller-->
+        <scene sceneID="Elt-SX-vtm">
+            <objects>
+                <tableViewController id="Pnu-cZ-z0J" customClass="RDThirdTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="XYx-ua-zOi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="RDThirdTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RDThirdTableViewCell" rowHeight="120" id="CBY-T3-0wT">
+                                <rect key="frame" x="0.0" y="28" width="375" height="120"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="CBY-T3-0wT" id="ypd-08-yKe">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pic" translatesAutoresizingMaskIntoConstraints="NO" id="nFo-ij-9D8">
+                                            <rect key="frame" x="142.5" y="14" width="90" height="90"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="90" id="Hcp-Nk-df2"/>
+                                                <constraint firstAttribute="width" constant="90" id="pLX-Qh-R2N"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="nFo-ij-9D8" firstAttribute="centerX" secondItem="ypd-08-yKe" secondAttribute="centerX" id="0zV-tA-60L"/>
+                                        <constraint firstItem="nFo-ij-9D8" firstAttribute="centerY" secondItem="ypd-08-yKe" secondAttribute="centerY" id="D0z-Mz-Na3"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Pnu-cZ-z0J" id="lgh-09-QTg"/>
+                            <outlet property="delegate" destination="Pnu-cZ-z0J" id="AI0-Cs-jUV"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="pNy-Lv-mQl"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bPJ-2P-8O5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="932" y="1555"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="feed_icon_close_small" width="17" height="17"/>
+        <image name="pic" width="90" height="90"/>
+    </resources>
 </document>
